# ros_rgb_to_gray

./: CMakeLists.txt  README.md  package.xml
include/ros_rgb_to_gray/: rgb_to_gray.h
src/: rgb_to_gray.cc  ros_rgb_to_gray_node.cc
